kubernetes/apps/tools/garage/app/endpointslice.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0-standalone-strict/endpointslice-discovery-v1.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: garage-admin
  labels:
    kubernetes.io/service-name: garage-admin
addressType: IPv4
ports:
- name: http
  protocol: TCP
  port: 3909
endpoints:
- addresses:
  - 10.100.47.100
  conditions:
    ready: true
