kubernetes/apps/tools/garage/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-admin-envoy
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "garage.${HOME_DOMAIN}"
  rules:
  - backendRefs:
    - name: garage-admin
      port: 80
