kubernetes/apps/tools/garage/app/httproute-s3.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-s3-envoy
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "s3.garage.${HOME_DOMAIN}"
  rules:
  - backendRefs:
    - name: garage-s3
      port: 80
